2-etc/trigono/destRuleandvirtualservice/trigono-destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: trigono-dr
  namespace: pair
spec:
  host: trigono
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
