2-etc/trigono/destRuleandvirtualservice/trigono-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trigono-vs
  namespace: pair
spec:
  hosts:
  - trigono
  http:
  - route:
    - destination:
        host: trigono
        subset: ""
